=============

tig master branch
-----------------

Improvements:

 - F5 also refreshes the current view.
 - Allow line graphics to be disabled with new line-graphics option.
 - Main view: also include the reference names when searching.
 - Stage view: add stage-next action to jump to next diff chunk that can
   be staged. By default bound to '@'.
 - Configure: check for the ncurses header files.

Bug fixes:

 - Fix regression when staging all diff chunks in a section.
 - Bind the maximize view action to 'O'; it conflicted with the
   keybinding to launch the merge tool in the status view.
 - Fix problem with $(cmd) usage in shell code. Some shells (jsh)
   installed as /bin/sh does not support it.
 - Documentation: Rename gitlink macro to support AsciiDoc 8.2.3.

tig-0.11
--------

Incompatibilities:

 - Remove parsing of deprecated options: -g, -l, -d.
 - The first seen '--' will stop option parsing and is passed to git
   instead of breaking out of tig's option parsing.

New features:

 - Blame view; bound to 'B' by default, reachable from the command line
   and the tree, status, and stage views.
 - Blame/main view: allow display of date, author, and references to be
   toggled on/off. Bound to 'D', 'A', and 'F' respectively.
 - Add action to maximize the current view.

Improvements:

 - Show the current branch in the status view.
 - Show local/light-weight tags.

Bug fixes:

 - Fix regressions for the pager mode.
 - Fix refreshing of the index with working directory info.

tig-0.10.1
----------

Improvements:

 - Status view: detect renamed files and show them with 'R'.
 - Status view: refresh the index to avoid "empty diffs".
 - Diff view: make diff headers more verbose to include e.g. committer.
 - Configure: check for the ncursesw library.

Bug fixes:

 - Fix UTF8 handling for tag names and commit messages.
 - Fix the check for git-config(1) in configure to handle the case when
   git has been installed using a libexecdir which is not in the path.